//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table School {
  id String [pk]
  name String [unique, not null]
  email String [unique, not null]
  users User [not null]
  subjects Subject [not null]
}

Table User {
  id String [pk]
  firstName String [not null]
  lastName String [not null]
  email String [unique, not null]
  username String [unique, not null]
  avatar String
  student Boolean [not null]
  school School
  schoolId String [not null]
  lessons Lesson [not null]
  library Library
}

Table Subject {
  id String [pk]
  name String [not null]
  lessons Lesson [not null]
  school School [not null]
  schoolId String [not null]

  indexes {
    (name, schoolId) [unique]
  }
}

Table Lesson {
  id String [pk]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  scheduledDate String [not null]
  video String
  drawing String
  subject Subject [not null]
  subjectId String [not null]
  librarys Library [not null]
  users User [not null]
  notes NoteBook [not null]
  whiteboard Whiteboard

  indexes {
    (name, subjectId) [unique]
  }
}

Table Library {
  id String [pk]
  lessons Lesson [not null]
  user User [not null]
  userId String [unique, not null]
  Notes NoteBook [not null]
}

Table NoteBook {
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  note String
  library Library [not null]
  libraryId String [not null]
  lesson Lesson [not null]
  lessonId String [not null]

  indexes {
    (libraryId, lessonId) [pk]
    (name, libraryId) [unique]
  }
}

Table Whiteboard {
  uuid String [pk]
  teamUUID String [not null]
  appUUID String [not null]
  isBan Boolean [not null]
  createdAt String [not null]
  limit Int [not null]
  token String [unique]
  lesson Lesson
  lessonId String [unique]
}

Ref: User.schoolId > School.id

Ref: Subject.schoolId > School.id

Ref: Lesson.subjectId > Subject.id

Ref: Library.userId - User.id

Ref: NoteBook.libraryId > Library.id

Ref: NoteBook.lessonId > Lesson.id

Ref: Whiteboard.lessonId - Lesson.id